--- a/index.html
+++ b/index.html
@@ -2,85 +2,91 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <meta http-equiv="X-UA-Compatible" content="ie=edge" />
- <link rel="stylesheet" href="style.css" />
- <title>Static Template</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="./style.css" rel="stylesheet" />
+  <title>CSS Template</title>
 </head>
 <body>
 
-<div class="grid-container-1">
- <div class="span-12-columns">
-  
-<div class="top">
- <header>Samir Limbu</header>
- <sub>Product Designer based in London</sub>
+<div class="top-panel">
+  <div class="top">
+  <img src="images/my photo.png"/>
+  <div class="title">
+  <header>Samir Limbu</header>
+  <sub>Product Designer based in London</sub>
+  <button>LinkedIn</button>
+  </div>
+  </div>
 </div>
- 
- 
- <h1>About me</h1>
+
+
+<h1>About me</h1>
 <p>I was born in Nepal but spent a greater part of my growing days in India where I received my formal high school
 education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from
 Kingston University.
-
+<br><br>
 My experience lies in investigating and mapping out the needs and pains of a user to design a simple and seamless
 solution. I have worked in highly collaborative environments with cross-disciplinary teams of engineers and QA's taking
 ownership of the project from start to end.
-
+<br><br>
 I’m currently working as a Product Designer at Preqin to help build a SaaS platform to help General Partners with
 Fundraising workflow.</p>
+
 
 
 <h1>Process</h1>
 <ul>
  <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into business goals and understand
  the user's needs.</li>
+ <br>
  <li><strong>Define</strong> how we can help out the user by reviewing quantitative and qualitative research data.</li>
+ <br>
  <li><strong>Ideation</strong> process to generate different ideas to solve the user's problem and add value to the product.</li>
+ <br>
  <li><strong>Develop</strong> ideas into wireframes and test design with the user and collect feedback. Make design iterations based on the
  user feedback.</li>
 </ul>
 
  <h1>Work experience</h1>
  <h2>Preqin - Product Designer (July 2020 – Present)</h2>
+ <p>At Preqin, I am working in a GP (General Partner) team to improve our Pro Platform user experience and reduce customer
+churn.
+<br><br>
+As a Product Designer, I lead the project discovery, solution, design, and delivery phase based on the problem
+statements provided by Product Owners. During all the phases of the project, I work very closely with Senior
+Stakeholders, Product Managers, Engineers, and QA. I run workshops for ideation and feature prioritization to share and
+align our decisions as a team.</p>
+
+ <h3>Reed.co.uk - Product Designer (Jan – Apr 2020)</h3>
  <p>During my short time at Reed.co.uk, I was part of the team that focused on improving “Post-a-job” user journey for the
  “direct recruiter” tier customers. For this project, I worked with the Project Manager, Back-end/Front-end Engineers,
  and Scrum Master.
- 
+ <br><br>
  After analyzing existing user research data and current user experience, I highlighted the top three factors that would
  provide a better user experience and clear communication of the product that they are purchasing. Based on my discovery,
  I designed a guided “post-a-job” experience to help new users improve the quality of the job advert. In the new design,
  we communicate the benefits of posting a job advert with Reed to increase the direct recruiter conversion.</p>
 
- <h2>Reed.co.uk - Product Designer (Jan – Apr 2020)</h2>
- <p>During my short time at Reed.co.uk, I was part of the team that focused on improving “Post-a-job” user journey for the
- “direct recruiter” tier customers. For this project, I worked with the Project Manager, Back-end/Front-end Engineers,
- and Scrum Master.
- 
- After analyzing existing user research data and current user experience, I highlighted the top three factors that would
- provide a better user experience and clear communication of the product that they are purchasing. Based on my discovery,
- I designed a guided “post-a-job” experience to help new users improve the quality of the job advert. In the new design,
- we communicate the benefits of posting a job advert with Reed to increase the direct recruiter conversion.</p>
-
- <h2>Foundry - Product Designer (Jul 2018 – Dec 2019)</h2>
- <p>At Foundry, I worked on multiple new features and design library for Nuke Studio and Hiero 12.1 (released on 01/2020).
- 
+ <h3>Foundry - Product Designer (Jul 2018 – Dec 2019)</h3>
+ <p>At Foundry, I worked on multiple new features and design library for Nuke Studio and Hiero 12.1 (released on 1st Jan 2020).
+ <br><br>
  Since it is a software company most of my project required investigating third-party API and competitive analysis. After
  my investigation, I worked closely with the Product Manager and Senior Engineer to design a prototype to meet the
  feature requirements without any technical limitation when it goes to the development stage. I worked on the project
  with the Engineering and QA team until it was bug-free and ready for release.</p>
 
-  <h2>Homeshift - Product Designer Intern (Mar – Jun 2018)</h2>
+  <h3>Homeshift - Product Designer Intern (Mar – Jun 2018)</h3>
   <p>My main focus at Homeshift was to create a new user journey and design to help new inheriting customers signup to
   Homeshift efficiently. For this project, I started the discovery by mapping the current user journey and conducting user
   interviews. After analyzing the research data, I designed a communication solution that was simple and effective for our
   customers.</p>
 
-  <h3>Case studies are available on request.</h3>
-
-</div>
-  </div>
+  <h4>Case studies are provided on request.</h4>
 
 </body>
 </html>
+
+<!-- Figma to HTML -->
+
