--- a/index.html
+++ b/index.html
@@ -2,42 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link href="./style.css" rel="stylesheet" />
-  <title>CSS Template</title>
+ <meta charset="UTF-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+ <link href="./style.css" rel="stylesheet" />
+ <script src="https://kit.fontawesome.com/bca9e321a6.js" crossorigin="anonymous"></script>
+ <title>CSS Template</title>
 </head>
-<body>
 
-<div class="top-panel">
-  <div class="top">
-  <img src="images/my photo.png"/>
-  <div class="title">
-  <header>Samir Limbu</header>
-  <sub>Product Designer based in London</sub>
-  <button>LinkedIn</button>
+<body>
+<div class="grid">
+
+  <div class="col1">
+    <img src="images/my photo.png" />
   </div>
+
+  <div class="col2">
+   <!-- <div class="title"> -->
+   <h1>Samir Limbu</h1>
+   <h2>Product Designer based in London 🇬🇧</h2>
+   <div class="actions">
+    <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i class="fa-brands fa-linkedin"></i>Get in touch</a>
+    <a class="link" href="https://www.keepandshare.com/doc11/34302/samir-limbu-cv-pdf-4-5-meg?da=y" target="_blank"></i>Download CV</a>
+    <!-- </div> -->
   </div>
+
 </div>
 
+<div class="About">
+  <h3>About me</h3>
+  <br>
+  <p>I was born in Nepal but spent a greater part of my growing days in India where I received my formal high school
+  education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from
+  Kingston University.
+  <br><br>
+  My experience lies in investigating and mapping out the needs and pains of a user to design a simple and seamless
+  solution. I have worked in highly collaborative environments with cross-disciplinary teams of engineers and QA's taking
+  ownership of the project from start to end.
+  <br><br>
+  I’m currently working as a Product Designer at Preqin to help build a SaaS platform to help General Partners with
+  Fundraising workflow.</p>
+</div>
 
-<h1>About me</h1>
-<p>I was born in Nepal but spent a greater part of my growing days in India where I received my formal high school
-education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from
-Kingston University.
-<br><br>
-My experience lies in investigating and mapping out the needs and pains of a user to design a simple and seamless
-solution. I have worked in highly collaborative environments with cross-disciplinary teams of engineers and QA's taking
-ownership of the project from start to end.
-<br><br>
-I’m currently working as a Product Designer at Preqin to help build a SaaS platform to help General Partners with
-Fundraising workflow.</p>
-
-
-
-<h1>Process</h1>
-<ul>
+<div class="Process">
+ <h3>Process</h3>
+ <br>
+ <!-- <ul> -->
  <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into business goals and understand
  the user's needs.</li>
  <br>
@@ -47,19 +57,27 @@ Fundraising workflow.</p>
  <br>
  <li><strong>Develop</strong> ideas into wireframes and test design with the user and collect feedback. Make design iterations based on the
  user feedback.</li>
-</ul>
+<!-- </ul> -->
+</div>
 
- <h1>Work experience</h1>
- <h2>Preqin - Product Designer (July 2020 – Present)</h2>
+<div class="Work1">
+ <h3>Work experience</h3>
+ <br>
+ <h4>Preqin - Product Designer (Jul 2020 – Present)</h4>
+ <br>
  <p>At Preqin, I am working in a GP (General Partner) team to improve our Pro Platform user experience and reduce customer
-churn.
-<br><br>
-As a Product Designer, I lead the project discovery, solution, design, and delivery phase based on the problem
-statements provided by Product Owners. During all the phases of the project, I work very closely with Senior
-Stakeholders, Product Managers, Engineers, and QA. I run workshops for ideation and feature prioritization to share and
-align our decisions as a team.</p>
+ churn.
+ <br><br>
+ As a Product Designer, I lead the project discovery, solution, design, and delivery phase based on the problem
+ statements provided by Product Owners. During all the phases of the project, I work very closely with Senior
+ Stakeholders, Product Managers, Engineers, and QA. I run workshops for ideation and feature prioritization to share and
+ align our decisions as a team.
+ </p>
+</div>
 
- <h3>Reed.co.uk - Product Designer (Jan – Apr 2020)</h3>
+<div class="Work2">
+ <h4>Reed.co.uk - Product Designer (Jan – Apr 2020)</h4>
+ <br>
  <p>During my short time at Reed.co.uk, I was part of the team that focused on improving “Post-a-job” user journey for the
  “direct recruiter” tier customers. For this project, I worked with the Project Manager, Back-end/Front-end Engineers,
  and Scrum Master.
@@ -67,26 +85,39 @@ align our decisions as a team.</p>
  After analyzing existing user research data and current user experience, I highlighted the top three factors that would
  provide a better user experience and clear communication of the product that they are purchasing. Based on my discovery,
  I designed a guided “post-a-job” experience to help new users improve the quality of the job advert. In the new design,
- we communicate the benefits of posting a job advert with Reed to increase the direct recruiter conversion.</p>
+ we communicate the benefits of posting a job advert with Reed to increase the direct recruiter conversion.
+ </p>
+</div>
 
- <h3>Foundry - Product Designer (Jul 2018 – Dec 2019)</h3>
- <p>At Foundry, I worked on multiple new features and design library for Nuke Studio and Hiero 12.1 (released on 1st Jan 2020).
+<div class="Work3">
+ <h4>Foundry - Product Designer (Jul 2018 – Dec 2019)</h4>
+ <br>
+ <p>At Foundry, I worked on multiple new features and design library for Nuke Studio and Hiero 12.1 (released on 01/2020).
  <br><br>
  Since it is a software company most of my project required investigating third-party API and competitive analysis. After
  my investigation, I worked closely with the Product Manager and Senior Engineer to design a prototype to meet the
  feature requirements without any technical limitation when it goes to the development stage. I worked on the project
- with the Engineering and QA team until it was bug-free and ready for release.</p>
+ with the Engineering and QA team until it was bug-free and ready for release.
+ </p>
+</div>
 
-  <h3>Homeshift - Product Designer Intern (Mar – Jun 2018)</h3>
-  <p>My main focus at Homeshift was to create a new user journey and design to help new inheriting customers signup to
-  Homeshift efficiently. For this project, I started the discovery by mapping the current user journey and conducting user
-  interviews. After analyzing the research data, I designed a communication solution that was simple and effective for our
-  customers.</p>
+<div class="Work4">
+ <h4>Homeshift - Product Designer Intern (Mar – Jun 2018)</h4>
+ <br>
+ <p>My main focus at Homeshift was to create a new user journey and design to help new inheriting customers signup to
+ Homeshift efficiently. For this project, I started the discovery by mapping the current user journey and conducting user
+ interviews. After analyzing the research data, I designed a communication solution that was simple and effective for our
+ customers.
+ </p>
+</div>
 
-  <h4>Case studies are provided on request.</h4>
+<div class="last">
+ <h3>Portfolio available on request.</h3>
+ <br><br>
+  <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i class="fa-brands fa-linkedin"></i>Get in touch</a>
+</div>
+
 
 </body>
+
 </html>
-
-<!-- Figma to HTML -->
-
