--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="shortcut icon" type="x-icon" href="/Images/my logo.svg">
 
 <head>
  <meta charset="UTF-8" />
