grid web design
new tab icon without the white border

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
  <link href="./style.css" rel="stylesheet" />
  <script src="https://kit.fontawesome.com/bca9e321a6.js" crossorigin="anonymous"></script>
- <title>CSS Template</title>
+ <title>Samir Limbu</title>
 </head>
 
 <body>
