--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="shortcut icon" type="x-icon" href="/Images/my logo.svg">
+  <link rel="shortcut icon" type="x-icon" href="/Images/my logo.png">
 
 <head>
  <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
  <title>Samir Limbu</title>
 </head>
 
-<body>
+<body> 
 <div class="grid">
 
   <div class="col1">
@@ -23,18 +23,18 @@
    <h1>Samir Limbu</h1>
    <h2>Product Designer based in London 🇬🇧</h2>
    <div class="actions">
-    <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i class="fa-brands fa-linkedin"></i>Get in touch</a>
-    <a class="link" href="https://www.keepandshare.com/doc11/34302/samir-limbu-cv-pdf-4-5-meg?da=y" target="_blank"></i>Download CV</a>
-    <!-- </div> -->
+    <a class="btn" href="www.linkedin.com/in/samir-limbu/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+    <a class="link" href="mailto: samirlimbu30@gmail.com">samirlimbu30@gmail.com</a>
+    <!-- </div> --> 
   </div>
 
 </div>
 
 <div class="About">
-  <h3>About me</h3>
+  <h2>About me</h2>
   <br>
   <p>I was born in Nepal but spent a greater part of my growing days in India where I received my formal high school
-  education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from
+  education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from  
   Kingston University.
   <br><br>
   My experience lies in investigating and mapping out the needs and pains of a user to design a simple and seamless
@@ -46,7 +46,7 @@
 </div>
 
 <div class="Process">
- <h3>Process</h3>
+ <h2>Process</h2>
  <br>
  <!-- <ul> -->
  <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into business goals and understand
@@ -62,9 +62,9 @@
 </div>
 
 <div class="Work1">
- <h3>Work experience</h3>
+ <h2>Work experience</h2>
  <br>
- <h4>Preqin - Product Designer (Jul 2020 – Present)</h4>
+ <h3>Preqin - Product Designer (Jul 2020 – Present)</h3>
  <br>
  <p>At Preqin, I am working in a GP (General Partner) team to improve our Pro Platform user experience and reduce customer
  churn.
@@ -77,7 +77,7 @@
 </div>
 
 <div class="Work2">
- <h4>Reed.co.uk - Product Designer (Jan – Apr 2020)</h4>
+ <h3>Reed.co.uk - Product Designer (Jan – Apr 2020)</h3>
  <br>
  <p>During my short time at Reed.co.uk, I was part of the team that focused on improving “Post-a-job” user journey for the
  “direct recruiter” tier customers. For this project, I worked with the Project Manager, Back-end/Front-end Engineers,
@@ -91,7 +91,7 @@
 </div>
 
 <div class="Work3">
- <h4>Foundry - Product Designer (Jul 2018 – Dec 2019)</h4>
+ <h3>Foundry - Product Designer (Jul 2018 – Dec 2019)</h3>
  <br>
  <p>At Foundry, I worked on multiple new features and design library for Nuke Studio and Hiero 12.1 (released on 01/2020).
  <br><br>
@@ -103,7 +103,7 @@
 </div>
 
 <div class="Work4">
- <h4>Homeshift - Product Designer Intern (Mar – Jun 2018)</h4>
+ <h3>Homeshift - Product Designer Intern (Mar – Jun 2018)</h3>
  <br>
  <p>My main focus at Homeshift was to create a new user journey and design to help new inheriting customers signup to
  Homeshift efficiently. For this project, I started the discovery by mapping the current user journey and conducting user
@@ -113,9 +113,10 @@
 </div>
 
 <div class="last">
- <h3>Portfolio available on request.</h3>
+ <h2>My work</h2>
  <br><br>
-  <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i class="fa-brands fa-linkedin"></i>Get in touch</a>
+ <a class="btn" href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662" target="_blank">View portfolio<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+<a class="link" href="https://www.keepandshare.com/doc11/34302/samir-limbu-cv-pdf-4-5-meg?da=y"target="_blank"></i>Download CV</a>
 </div>
 
 
