Linkedin URL update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <h1>Samir Limbu</h1>
    <h2>Product Designer based in London 🇬🇧</h2>
    <div class="actions">
-    <a class="btn" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+    <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
     <a class="link" href="mailto: samirlimbu30@gmail.com">samirlimbu30@gmail.com</a>
     <!-- </div> --> 
   </div>
