--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
    <h1>Samir Limbu</h1>
    <h2>Product Designer based in London 🇬🇧</h2>
    <div class="actions">
-    <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
-    <a class="link" href="mailto: samirlimbu30@gmail.com">samirlimbu30@gmail.com</a>
+    <a class="btn"
+      href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
+      target="_blank">My work<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+    <a class="link" href="mailto: samirlimbu30@gmail.com">Send me email</a>
     <!-- </div> --> 
   </div>
 
@@ -112,9 +114,10 @@
 </div>
 
 <div class="last">
- <h2>My work</h2>
- <br><br>
- <a class="btn" href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662" target="_blank">View portfolio<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+ <h2>Get in touch</h2>
+ <br>
+<a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i
+    class="fa-brands fa-linkedin"></i>LinkedIn</a>
 <a class="link" href="https://www.keepandshare.com/doc11/34302/samir-limbu-cv-pdf-4-5-meg?da=y"target="_blank"></i>Download CV</a>
 </div>
 
