Preqin exp text change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   solution. I have worked in highly collaborative environments with cross-disciplinary teams of engineers and QA's taking
   ownership of the project from start to end.
   <br><br>
-  I’m currently working as a Product Designer at Preqin to help build a SaaS platform to help General Partners with
+  I’m currently working as a Senior Product Designer at Preqin to help build a SaaS platform to help General Partners with
   Fundraising workflow.</p>
 </div>
 
@@ -65,7 +65,7 @@
 <div class="Work1">
  <h2>Work experience</h2>
  <br>
- <h3>Preqin - Product Designer (Jul 2020 – Present)</h3>
+ <h3>Preqin - Product Designer (Jul 2020 – present)</h3>
  <br>
  <p>At Preqin, I am working in a GP (General Partner) team to improve our Pro Platform user experience and reduce customer
  churn.
@@ -74,6 +74,8 @@
  statements provided by Product Owners. During all the phases of the project, I work very closely with Senior
  Stakeholders, Product Managers, Engineers, and QA. I run workshops for ideation and feature prioritization to share and
  align our decisions as a team.
+ <br><br>
+I also provide some mentoring and guidance to new and junior designers at Preqin.
  </p>
 </div>
 
