--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <a class="btn"
       href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
       target="_blank">My work<i class="fa-solid fa-square-arrow-up-right"></i></a>
-    <a class="link" href="mailto: samirlimbu30@gmail.com">Send me email</a>
+    <a class="link" href="https://www.keepandshare.com/doc11/34302/samir-limbu-cv-pdf-4-5-meg?da=y"
+      target="_blank"></i>Download CV</a>
     <!-- </div> --> 
   </div>
 
@@ -120,7 +121,7 @@ I also provide some mentoring and guidance to new and junior designers at Preqin
  <br>
 <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i
     class="fa-brands fa-linkedin"></i>LinkedIn</a>
-<a class="link" href="https://www.keepandshare.com/doc11/34302/samir-limbu-cv-pdf-4-5-meg?da=y"target="_blank"></i>Download CV</a>
+<a class="link" href="mailto: samirlimbu30@gmail.com">Send me email</a>
 </div>
 
 
