--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a class="btn"
       href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
       target="_blank">My work<i class="fa-solid fa-square-arrow-up-right"></i></a>
-    <a class="link" href="https://www.keepandshare.com/doc11/34302/samir-limbu-cv-pdf-4-5-meg?da=y"
+    <a class="link" href="https://pdfhost.io/v/.OAT8ZljU_Samir_Limbu_CV"
       target="_blank"></i>Download CV</a>
     <!-- </div> --> 
   </div>
