--- a/index.html
+++ b/index.html
@@ -37,31 +37,26 @@
   <h2>About me</h2>
   <br>
   <p>I was born in Nepal but spent a greater part of my growing days in India where I received my formal high school
-  education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from  
+  education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from
   Kingston University.
   <br><br>
-  My experience lies in investigating and mapping out the needs and pains of a user to design a simple and seamless
-  solution. I have worked in highly collaborative environments with cross-disciplinary teams of engineers and QA's taking
-  ownership of the project from start to end.
+  With 5+ years of experience in the design industry, I have honed my skills in UX and UI design, with a focus on
+  investigating and mapping out user needs and pains to create simple and seamless solutions. I have worked in highly
+  collaborative environments with cross-disciplinary teams of engineers and QA's, taking ownership of projects from start
+  to end.
   <br><br>
-  I’m currently working as a Senior Product Designer at Preqin to help build a SaaS platform to help General Partners with
-  Fundraising workflow.</p>
+  I am currently working as a Senior Product Designer at Preqin, where I am helping to build a SaaS platform to help
+  General Partners with their fundraising workflow. In addition to my design projects, I also work closely with the
+  product and design leadership team to develop the vision for our product and provide mentorship to junior and mid-level
+  designers on the team.
+  <br><br>
+  I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
+  in the power of collaboration and teamwork to achieve great things.
+  <br><br>
+  If you are looking for a product designer who is passionate about creating simple, seamless solutions that delight
+  users, I would love to hear from you.</p>
 </div>
 
-<div class="Process">
- <h2>Process</h2>
- <ul>
- <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into business goals and understand
- the user's needs.</li>
- <br>
- <li><strong>Define</strong> how we can help out the user by reviewing quantitative and qualitative research data.</li>
- <br>
- <li><strong>Ideation</strong> process to generate different ideas to solve the user's problem and add value to the product.</li>
- <br>
- <li><strong>Develop</strong> ideas into wireframes and test design with the user and collect feedback. Make design iterations based on the
- user feedback.</li>
-</ul>
-</div>
 
 <div class="Work1">
  <h2>Work experience</h2>
@@ -75,8 +70,6 @@
  statements provided by Product Owners. During all the phases of the project, I work very closely with Senior
  Stakeholders, Product Managers, Engineers, and QA. I run workshops for ideation and feature prioritization to share and
  align our decisions as a team.
- <br><br>
-I also provide some mentoring and guidance to new and junior designers at Preqin.
  </p>
 </div>
 
@@ -114,6 +107,25 @@ I also provide some mentoring and guidance to new and junior designers at Preqin
  interviews. After analyzing the research data, I designed a communication solution that was simple and effective for our
  customers.
  </p>
+</div>
+
+<div class="Process">
+  <h2>My process</h2>
+  <ul>
+    <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into
+      business goals and understand
+      the user's needs.</li>
+    <br>
+    <li><strong>Define</strong> how we can help out the user by reviewing quantitative and qualitative research data.
+    </li>
+    <br>
+    <li><strong>Ideation</strong> process to generate different ideas to solve the user's problem and add value to the
+      product.</li>
+    <br>
+    <li><strong>Develop</strong> ideas into wireframes and test design with the user and collect feedback. Make design
+      iterations based on the
+      user feedback.</li>
+  </ul>
 </div>
 
 <div class="last">
