--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
   </div>
 
   <div class="col2">
-   <!-- <div class="title"> -->
-   <h1>Samir Limbu</h1>
-   <h2>Product Designer based in London 🇬🇧</h2>
-   <div class="actions">
-    <a class="btn"
-      href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
-      target="_blank">My work<i class="fa-solid fa-square-arrow-up-right"></i></a>
-    <a class="link" href="https://pdfhost.io/v/4Pd6C.aAd_Samir_Limbu_CV"
-      target="_blank"></i>Download CV</a>
-    <!-- </div> --> 
+    <h1>Samir Limbu</h1>
+    <h2>Product Designer based in London 🇬🇧</h2>
+    <div class="actions">
+      <a class="btn"
+        href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
+        target="_blank">My work<i class="fa-solid fa-square-arrow-up-right"></i></a>
+      <a class="link" href="https://pdfhost.io/v/4Pd6C.aAd_Samir_Limbu_CV" target="_blank"></i>Download CV</a>
+    </div>
   </div>
 
 </div>
@@ -53,8 +51,8 @@
   I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
-  If you are looking for a product designer who is passionate about creating simple, seamless solutions that delight
-  users, I would love to hear from you.</p>
+  If you are looking for a product designer who is passionate about creating simple and seamless solutions that delight
+  users experience, let's get in touch.</p>
 </div>
 
 
