Get in touch hyperlink

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
   If you are looking for a product designer who is passionate about creating simple and seamless solutions that delight
-  users experience, let's get in touch.</p>
-</div>
+  users experience, let's <a class="inLine" href="hhttps://www.linkedin.com/in/samir-limbu/">get in touch</a>.</p>
+  </div>
 
 
 <div class="Work1">
