--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   collaborative environments with cross-disciplinary teams of engineers and QA's, taking ownership of projects from start
   to end.
   <br><br>
-  I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
+  I am passionate about creating products that make user's lives easier and more enjoyable. I am also a strong believer
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
   If you are looking for a product designer who is passionate about creating simple and seamless solutions that delight
