--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="actions">
       <a class="btn"
         href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
-        target="_blank">My work<i class="fa-solid fa-square-arrow-up-right"></i></a>
+        target="_blank">My work<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
       <a class="link" href="https://pdfhost.io/v/4Pd6C.aAd_Samir_Limbu_CV" target="_blank"></i>Download CV</a>
     </div>
   </div>
@@ -43,7 +43,7 @@
   collaborative environments with cross-disciplinary teams of engineers and QA's, taking ownership of projects from start
   to end.
   <br><br>
-  I am passionate about creating products that make user's lives easier and more enjoyable. I am also a strong believer
+  I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
   If you are looking for a product designer who is passionate about creating simple and seamless solutions that delight
