removing the horizontal scroll for small screen

--- a/index.html
+++ b/index.html
@@ -103,19 +103,14 @@ designers on the team.
 <div class="Process">
   <h2>My process</h2>
   <ul>
-    <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into
-      business goals and understand
-      the user's needs.</li>
+    <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into business goals and understand the user's needs.</li>
     <br>
     <li><strong>Define</strong> how we can help out the user by reviewing quantitative and qualitative research data.
     </li>
     <br>
-    <li><strong>Ideation</strong> process to generate different ideas to solve the user's problem and add value to the
-      product.</li>
+    <li><strong>Ideation</strong> process to generate different ideas to solve the user's problem and add value to the product.</li>
     <br>
-    <li><strong>Develop</strong> ideas into wireframes and test design with the user and collect feedback. Make design
-      iterations based on the
-      user feedback.</li>
+    <li><strong>Develop</strong> ideas into wireframes and test design with the user and collect feedback. Make design iterations based on the user feedback.</li>
   </ul>
 </div>
 
