--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@ designers on the team.
 <div class="Process">
   <h2>My process</h2>
   <ul>
-    <li> <strong>Discovery</strong> work with internal stakeholders and Product team to get better insights into business goals and understand the user's needs.</li>
+    <li> <strong>Discovery:</strong> I work closely with internal stakeholders and the product team to understand business goals and user needs. I also conduct user research to gather quantitative and qualitative data about user pain points, goals, and behaviors. I then analyze this data to identify opportunities for improvement and innovation.</li>
     <br>
-    <li><strong>Define</strong> how we can help out the user by reviewing quantitative and qualitative research data.
-    </li>
+    <li><strong>Define:</strong> Once I have a good understanding of the business goals and user needs, I define the problem we are trying to solve and the user we are designing for. I develop a user persona and user journey to better understand the user's needs and experience. I then define the product's vision, goals, and features.</li>
     <br>
-    <li><strong>Ideation</strong> process to generate different ideas to solve the user's problem and add value to the product.</li>
+    <li><strong>Ideation:</strong> Next, I ideate / run worshops to brainstorm a variety of solutions to the problem we are trying to solve. I consider different user needs, business goals, and technical constraints. I also sketch and prototype ideas to visualize and test different concepts.</li>
     <br>
-    <li><strong>Develop</strong> ideas into wireframes and test design with the user and collect feedback. Make design iterations based on the user feedback.</li>
+    <li><strong>Develop:</strong> Once I have a promising concept, I create high-fidelity wireframes and prototypes to test and refine the design. I conduct user testing to get feedback on the design and identify areas for improvement. I then make design iterations based on user feedback.</li>
   </ul>
 </div>
 
