random stuff LOL

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ designers on the team.
 <div class="Process">
   <h2>My process</h2>
   <ol>
-    <li> <strong>Discovery:</strong> I work closely with internal stakeholders and the product team to understand business goals and user needs. I also conduct user research to gather quantitative and qualitative data about user pain points, goals, and behaviors. I then analyze this data to identify opportunities for improvement and innovation.</li>
+    <li></strong><strong>Discovery:</strong> I work closely with internal stakeholders and the product team to understand business goals and user needs. I also conduct user research to gather quantitative and qualitative data about user pain points, goals, and behaviors. I then analyze this data to identify opportunities for improvement and innovation.</li>
     <br>
     <li><strong>Define:</strong> Once I have a good understanding of the business goals and user needs, I define the problem we are trying to solve and the user we are designing for. I develop a user persona and user journey to better understand the user's needs and experience. I then define the product's vision, goals, and features.</li>
     <br>
