Work experience text update

--- a/index.html
+++ b/index.html
@@ -67,36 +67,32 @@ designers on the team.
 <div class="Work2">
  <h3>Reed.co.uk - Product Designer (Jan – Apr 2020)</h3>
  <br>
- <p>During my short time at Reed.co.uk, I was part of the team that focused on improving “Post-a-job” user journey for the
- “direct recruiter” tier customers. For this project, I worked with the Project Manager, Back-end/Front-end Engineers,
- and Scrum Master.
+ <p>As part of a team dedicated to enhancing the user experience for Reed.co.uk's "direct recruiter" tier customers, I
+contributed to the improvement of the "post-a-job" journey. Collaborating with the Project Manager, Back-end/Front-end
+Engineers, and Scrum Master, I delved into existing user research data and analyzed the current user experience.
  <br><br>
- After analyzing existing user research data and current user experience, I highlighted the top three factors that would
- provide a better user experience and clear communication of the product that they are purchasing. Based on my discovery,
- I designed a guided “post-a-job” experience to help new users improve the quality of the job advert. In the new design,
- we communicate the benefits of posting a job advert with Reed to increase the direct recruiter conversion.
+Through this meticulous examination, I identified three key factors that would significantly enhance the user experience
+and ensure clear communication of the product being offered. Based on these findings, I designed a guided "post-a-job"
+experience that assists new users in crafting high-quality job adverts. This redesigned experience also effectively
+conveys the benefits of posting a job advert with Reed, thereby increasing the likelihood of direct recruiter
+conversion.
  </p>
 </div>
 
 <div class="Work3">
  <h3>Foundry - Product Designer (Jul 2018 – Dec 2019)</h3>
  <br>
- <p>At Foundry, I worked on multiple new features and design library for Nuke Studio and Hiero 12.1 (released on 01/2020).
+ <p>At Foundry, I was responsible for the development of multiple
+  new features and the design library for Nuke Studio and Hiero 12.1. These projects were released in January 2020.
  <br><br>
- Since it is a software company most of my project required investigating third-party API and competitive analysis. After
- my investigation, I worked closely with the Product Manager and Senior Engineer to design a prototype to meet the
- feature requirements without any technical limitation when it goes to the development stage. I worked on the project
- with the Engineering and QA team until it was bug-free and ready for release.
+Due to the nature of the software industry, most of my projects required in-depth research into third-party APIs and competitive analysis. Once I had a thorough understanding of the market, I would work closely with the Product Manager and Senior Engineer to design a prototype that met the feature requirements without introducing any technical limitations during the development stage. I would then work with the Engineering and QA teams to ensure that the project was bug-free and ready for release. I take pride in my ability to deliver high-quality software that meets the needs of users.
  </p>
 </div>
 
 <div class="Work4">
  <h3>Homeshift - Product Designer Intern (Mar – Jun 2018)</h3>
  <br>
- <p>My main focus at Homeshift was to create a new user journey and design to help new inheriting customers signup to
- Homeshift efficiently. For this project, I started the discovery by mapping the current user journey and conducting user
- interviews. After analyzing the research data, I designed a communication solution that was simple and effective for our
- customers.
+ <p>At Homeshift, I was tasked with streamlining the signup process for inheriting customers. To achieve this, I embarked on a journey of discovery, meticulously mapping the existing user journey and conducting in-depth interviews with customers. Armed with valuable insights from these research initiatives, I crafted a communication solution that was both simple and effective, ensuring a seamless and hassle-free signup experience for our valued customers.
  </p>
 </div>
 
