--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a class="btn"
         href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
         target="_blank">My work<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-      <a class="link" href="https://pdfhost.io/v/tkLcKTNQ1_Samir_Limbu_CV" target="_blank"></i>Download CV</a>
+      <a class="link" href="https://pdfhost.io/v/5xqfX1~hM_Samir_Limbu_CV" target="_blank"></i>Download CV</a>
     </div>
   </div>
 
