new text for get in touch

--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@ Due to the nature of the software industry, most of my projects required in-dept
 
 <div class="last">
  <h2>Get in touch</h2>
- <br><br>
+ <br>
+ <p>I'm always interested in hearing about new projects and opportunities. If you like what you see, please don't hesitate
+to reach out.</p>
+<br><br>
 <a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i
     class="fa-brands fa-linkedin"></i>LinkedIn</a>
 <a class="link" href="mailto: samirlimbu30@gmail.com">Send me email</a>
