--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <h1>Samir Limbu</h1>
     <h2>Product Designer based in London 🇬🇧</h2>
     <div class="actions">
-      <a class="btn"
+      <a class="primBtn"
         href="https://www.figma.com/proto/MJBgaTvl06vnnjPXVRgGJZ/My-General-stuff?node-id=664%3A4662&scaling=scale-down-width&page-id=203%3A2&starting-point-node-id=664%3A4662"
         target="_blank">My work<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-      <a class="link" href="https://pdfhost.io/v/5xqfX1~hM_Samir_Limbu_CV" target="_blank"></i>Download CV</a>
+      <a class="secBtn" href="https://pdfhost.io/v/5xqfX1~hM_Samir_Limbu_CV" target="_blank"></i>Download CV</a>
     </div>
   </div>
 
@@ -115,9 +115,9 @@ Due to the nature of the software industry, most of my projects required in-dept
  <p>I'm always interested in hearing about new projects and opportunities. If you like what you see, please don't hesitate
 to reach out.</p>
 <br><br>
-<a class="btn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i
+<a class="primBtn" href="https://www.linkedin.com/in/samir-limbu/" target="_blank"><i
     class="fa-brands fa-linkedin"></i>LinkedIn</a>
-<a class="link" href="mailto: samirlimbu30@gmail.com">Send me email</a>
+<a class="secBtn" href="mailto: samirlimbu30@gmail.com">Send me email</a>
 </div>
 
 
