--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
   If you are looking for a product designer who is passionate about creating simple and seamless solutions that delight
-  users experience, let's <a class="inLine" href="hhttps://www.linkedin.com/in/samir-limbu/">get in touch</a>.</p>
+  users experience, let's <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/">get in touch</a>.</p>
   </div>
 
 
