About me text update

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 <div class="About">
   <h2>About me</h2>
   <br>
-  <p>I was born in Nepal but spent a greater part of my growing days in India where I received my formal high school
-  education. I moved to the UK with my family in 2007. I received my Bachelor's in Computer Graphic Technology from
-  Kingston University.
+  <p>I am from Nepal but spent most of my formative years in Darjeeling India, where I completed my high school education. In 2007,
+  I relocated to the UK and earned my Bachelor's degree in Computer Graphic Technology from Kingston University.
   <br><br>
   With 5+ years of experience in the design industry, I have honed my skills in UX and UI design, with a focus on
   investigating and mapping out user needs and pains to create simple and seamless solutions. I have worked in highly
@@ -119,7 +118,6 @@ to reach out.</p>
     class="fa-brands fa-linkedin"></i>LinkedIn</a>
 <a class="secBtn" href="mailto: samirlimbu30@gmail.com">Send me email</a>
 </div>
-
 
 </body>
 
