--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <h2>About me</h2>
   <br>
   <p>I am from Nepal but spent most of my formative years in Darjeeling India, where I completed my high school education. In 2007,
-  I relocated to the UK and earned my Bachelor's degree in Computer Graphic Technology from Kingston University.
+  I relocated to the UK and completed my Bachelor's degree in Computer Graphic Technology from Kingston University.
   <br><br>
   With 5+ years of experience in the design industry, I have honed my skills in UX and UI design, with a focus on
   investigating and mapping out user needs and pains to create simple and seamless solutions. I have worked in highly
