updated notion link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Product Designer based in London 🇬🇧</h2>
     <div class="actions">
       <a class="primBtn"
-        href="https://sumptuous-emoji-e5d.notion.site/My-work-fd72240507564b49994814ce402474c1?pvs=4"
+        href="https://samirlimbu.notion.site/My-work-fd72240507564b49994814ce402474c1?pvs=4"
         target="_blank">My work<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
       <a class="secBtn" href="https://pdfhost.io/v/n0jZpDMFx_Samir_Limbu_CV" target="_blank"></i>Download CV</a>
     </div>
