--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
   I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
-  If you are looking for a product designer who is passionate about creating simple and seamless solutions that delight
-  users experience, let's <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/">get in touch</a>.</p>
+  Seek a product designer who crafts intuitive and user-friendly solutions? <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/">Let's connet</a>, my design case studies are aviliable on request.</p> 
   </div>
 
 
