About me text update again

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
-  Seek a product designer who crafts intuitive and user-friendly solutions? <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/">Let's connet</a>, my design case studies are aviliable on request.</p> 
+  If you are looking for a product designer a product designer who crafts intuitive and user-friendly solutions? <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/">Let's connet</a>, my design case studies are aviliable on request.</p> 
   </div>
 
 
