--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
   I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
-  If you are looking for a product designer a product designer who crafts intuitive and user-friendly solutions? <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/">Let's connet, my design case studies are aviliable on request</a>.</p> 
+  If you are looking for a product designer a product designer who crafts intuitive and user-friendly solutions? 
+  <br><br>
+  <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/"><h2>Let's connet, my design case studies are aviliable on request</h2></a></p> 
   </div>
 
 
