--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <br><br>
   If you are looking for a product designer a product designer who crafts intuitive and user-friendly solutions? 
   <br><br>
-  <a class="link" href="hhttps://www.linkedin.com/in/samir-limbu/"><h3>Let's connet, my design case studies are aviliable on request</h3></a></p> 
+  <a class="link" href="mailto: samirlimbu30@gmail.com"><h3>Let's connet, my design case studies are aviliable on request</h3></a></p> 
   </div>
 
 
