More copy update in About me section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   I am passionate about creating products that make people's lives easier and more enjoyable. I am also a strong believer
   in the power of collaboration and teamwork to achieve great things.
   <br><br>
-  If you are looking for a product designer a product designer who crafts intuitive and user-friendly solutions? 
-  <br><br>
+  If you are looking for a product designer who crafts intuitive and user-friendly solutions? 
+  <br>
   <a class="link" href="mailto: samirlimbu30@gmail.com"><h3>Let's connet, my design case studies are aviliable on request</h3></a></p> 
   </div>
 
